NXP-33029: Improve ConditionalIgnore mechanism